--- a/css/styles.css
+++ b/css/styles.css
@@ -82,6 +82,10 @@ line-height: 1.5;
 letter-spacing: 0.02em;
 color: #2e2f42;
 }
+.nav-link.current{
+position: relative;
+color: #404BBF;
+}
 .nav-link:hover {
  color: #404BBF;
 }
@@ -171,6 +175,7 @@ cursor: pointer;
 }
 .opportunities-class  {
 padding: 120px 0 120px;
+max-width: 1440px;
 }
 .visually-hidden:not(:focus):not(:active) {
 position: absolute;
@@ -214,6 +219,7 @@ color: #434455;
 background-color: #f4f4fd;
 padding: 120px 0;
 margin: 0;
+max-width: 1440px;
 }
 .container-team {
  padding: 32px 0;
@@ -238,8 +244,6 @@ flex-wrap: wrap;
 }
 .team-list {
 background-color: #ffffff;
-width: 264px;
-height: 380px;
 box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 flex-basis: calc((100% - 72px) / 4);
 border-radius: 0 0 4px 4px;
