--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,7 @@ overflow: hidden;
 }
 .page-header {
  border-bottom: 1px solid #e7e9fc;
+ box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);
 }
 .header-container {
 display: flex;
@@ -95,8 +96,7 @@ bottom: -1px;
 width: 100%;
 height: 4px;
 border-radius: 2px;
-background-color: #404BBF;;
-
+background-color: #404BBF;
 }
 .nav-link:hover {
  color: #404BBF;
