--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,6 @@ padding-left: 15px;
 padding-right: 15px;
 margin-left:  auto;
 margin-right: auto;
-overflow: hidden;
 }
 .page-header {
  border-bottom: 1px solid #e7e9fc;
@@ -89,7 +88,7 @@ position: relative;
 color: #404BBF;
 }
 .nav-link.current::before {
-content: '';
+content: "";
 position: absolute;
 left: 0;
 bottom: -1px;
