--- a/css/styles.css
+++ b/css/styles.css
@@ -87,7 +87,7 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 position: relative;
 color: #404BBF;
 }
-.nav-link.current::before {
+.nav-link.current::after {
 content: "";
 position: absolute;
 left: 0;
@@ -125,6 +125,7 @@ letter-spacing: 0.02em;
 color: #434455;
 display: block;
 align-items: center;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
 .address-link:hover {
@@ -137,6 +138,13 @@ color: #404BBF;
 padding: 188px 0 188px;
 background: #2e2f42;
 align-items: center;
+max-width: 1440px;
+background-image: linear-gradient (rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(./images/people-office.jpg);
+background-repeat: no-repeat;
+background-position: center;
+background-size: cover;
+margin-left: auto;
+margin-right: auto;
 }
 .hero-container {
 display: block;
@@ -230,7 +238,7 @@ color: #434455;
 background-color: #f4f4fd;
 padding: 120px 0;
 margin: 0;
-max-width: 1440px;
+
 }
 .container-team {
  padding: 32px 0;
