--- a/css/styles.css
+++ b/css/styles.css
@@ -138,7 +138,7 @@ color: #404BBF;
 padding: 188px 0 188px;
 align-items: center;
 max-width: 1440px;
-background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(./images/background/people-office.jpg);
+background-image: linear-gradient(rgba(46, 47, 66, 0.7),rgba(46, 47, 66, 0.7)), url(../images/background/people-office.jpg);
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
