--- a/css/styles.css
+++ b/css/styles.css
@@ -171,6 +171,7 @@ height: 56px;
 margin-left: auto;
 margin-right: auto;
 min-width: 169px;
+transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .order-service {
 font-family: "Roboto", sans-serif;
@@ -206,6 +207,16 @@ white-space: nowrap;
 clip-path: inset(100%);
 clip: rect(0 0 0 0);
 overflow: hidden;
+}
+.opportunities-icons-container {
+display: flex;
+height: 112px;
+border: 1px solid #8e8f99;
+border-radius: 4px;
+background: #f4f4fd;
+justify-content: center;
+margin-bottom: 8px;
+align-items: center;
 }
 .name-opportunities {
 gap: 24px;
