--- a/css/styles.css
+++ b/css/styles.css
@@ -307,6 +307,30 @@ color: #434455;
 background-color: #ffffff;
 text-align: center;
 }
+.icons-team {
+display: flex;
+align-items: center;
+justify-content: center;
+margin-top: 8px;
+gap: 24px;
+}
+.icons-team-item {
+width: 40px;
+height: 40px;
+}
+.icons-item {
+display: flex;
+border-radius: 50%;
+width: 100%;
+height: 100%;    
+background-color: #4d5ae5;
+justify-content: center;
+align-items: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.icons-item-item {
+    fill: #f4f4fd;
+}
 .portfolio {
 overflow: hidden;
 border-color: rgba(231, 233, 252, 1);
