--- a/css/styles.css
+++ b/css/styles.css
@@ -360,6 +360,28 @@ column-gap: 24px;
 }
 .portfolio-list {
 width: calc((100% - 48px) / 3);
+transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
+}
+.portfolio-list:hover .overlay {
+transform: translateY(0);
+}
+.portfolio-box {
+position: relative;
+overflow: hidden;
+}
+.overlay {
+letter-spacing: 0,02em;
+background-color: #4d5ae5;
+color: #f4f4fd;
+position: absolute;
+top: 0;
+left: 0;
+width: 100%;
+height: 100%;
+transform: translateY(100%);
+padding: 40px 32px;
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .portfolio-type-name {
 padding: 32px 16px;
@@ -379,7 +401,6 @@ margin-bottom: 8px;
 }
 .type-communication {
 font-family: "Roboto", sans-serif;
-font-weight: 400;
 font-size: 16px;
 line-height: 150%;
 letter-spacing: 0.02em;
@@ -389,6 +410,12 @@ color: #434455;
 background-color: #2e2f42;
 line-height: 1.6;
 padding: 100px 0;
+}
+.footer-container {
+ display: flex;
+}
+.footer-left {
+margin-right: 120px;
 }
 
 .footer-logo {
@@ -423,5 +450,45 @@ line-height: 150%;
 letter-spacing: 0.02em;
 color: #f4f4fd;
 max-width: 264px;
-
+}
+.footer-right {
+display: flex;
+flex-direction: column;
+fill: #f4f4fd;
+}
+.social-footer {
+font-family: "Roboto", sans-serif;
+font-weight: 500;
+font-size: 16px;
+line-height: 150%;
+letter-spacing: 0.02em;
+color: #fff;
+margin-bottom: 16px;
+}
+.footer-icons {
+display: flex;
+gap: 16px;
+justify-content: center;
+align-items: center;
+}
+.footer-icons-social {
+height: 40px;
+width: 40px;
+}
+.social-media {
+fill: #f4f4fd;
+}
+.footer-social {
+display: flex;
+background-color: #4d5ae5;
+justify-content: center;
+align-items: center;
+height: 100%;
+width: 100%;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+border-radius: 50%;
+}
+.footer-social:hover,
+.footer-social:focus {
+background-color: #31d0aa;
 }
